--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
+dotenv==0.21.1
+librosa==0.9.2
+numpy==1.24.2
 psycopg2==2.9.5
+pydub==0.25.1
 python-dotenv==0.21.0
+scipy==1.10.0
+sounddevice==0.4.5
+torch==1.13.1
+torchaudio==0.13.1
