--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-dotenv==0.21.1
 librosa==0.9.2
-numpy==1.24.2
+numpy==1.23.5
+pandas==1.5.3
 psycopg2==2.9.5
 pydub==0.25.1
-python-dotenv==0.21.0
+python-dotenv==0.21.1
 scipy==1.10.0
 sounddevice==0.4.5
-torch==1.13.1
-torchaudio==0.13.1
+soundfile==0.11.0
+torch==1.13.0
+torchaudio==0.13.0
